--- a/Quality/Quality/Views/PublicWondow/PictureList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/PictureList.cshtml
@@ -9,6 +9,9 @@
 
     string BeforeColumn = ViewData["BeforeColumn"] == null ? string.Empty : ViewData["BeforeColumn"].ToString();
     string AfterColumn = ViewData["AfterColumn"] == null ? string.Empty : ViewData["AfterColumn"].ToString();
+
+    string TargetBeforeHeader = ViewData["TargetBeforeHeader"] == null ? "Before" : ViewData["TargetBeforeHeader"].ToString();
+    string TargetAfterHeader = ViewData["TargetAfterHeader"] == null ? "After" : ViewData["TargetAfterHeader"].ToString();
 }
 
 @model Window_Picture
@@ -80,7 +83,7 @@
 <br />
 <div class="outerDiv" style="margin-right:2%;">
     <div class="grayDiv">
-        <h2 style="width:80%;float:left;padding-top:5px">Before</h2>
+        <h2 style="width:80%;float:left;padding-top:5px">@TargetBeforeHeader</h2>
         <input type="file" id="BeforeUpload" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
         <img id="BeforeUploadIcon" class="pointer uploadIcon" style="height: 90%; vertical-align: top;margin-right:5px;" src="~/Image/Icon/Upload.png" />
         <img id="BeforeCam" class="OpenCamera pointer" style="height:80%;padding-top:5px" src="~/Image/Icon/Camera.png" />
@@ -109,7 +112,7 @@
 </div>
 <div class="outerDiv">
     <div class="grayDiv">
-        <h2 style="width:80%;float:left;padding-top:5px">After</h2>
+        <h2 style="width:80%;float:left;padding-top:5px">@TargetAfterHeader</h2>
         <input type="file" id="AfterUpload" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
         <img id="AfterUploadIcon" class="pointer uploadIcon" style="height: 90%; vertical-align: top;margin-right:5px;" src="~/Image/Icon/Upload.png" />
         <img id="AfterCam" Type="After" class="OpenCamera pointer" style="height:80%;padding-top:5px" src="~/Image/Icon/Camera.png" />
