ISP20230851 - [Water Absorbency Test] 修正bug

--- a/Quality/Quality/Areas/BulkFGT/Views/WaterAbsorbency/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/WaterAbsorbency/Index.cshtml
@@ -1177,4 +1177,9 @@
 
         return sel.value;
     }
+
+    function ReportNoChange(value) {
+        $('#btnQuery').unbind('click').click();
+    }
+
 </script>
